fix firefox scrollbar

--- a/components/Scrollable/Scrollable.module.scss
+++ b/components/Scrollable/Scrollable.module.scss
@@ -19,7 +19,7 @@
   scrollbar-color: transparent transparent;
   scrollbar-width: thin;
   &:hover {
-    scrollbar-color: var(--base--border-color) transparent;
+    scrollbar-color: #80808027 transparent;
   }
 
   &::-webkit-scrollbar {
